--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "fitness-app",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -9,13 +9,25 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~4.0.1",
     "expo": "~52.0.27",
+    "expo-linear-gradient": "~14.0.2",
+    "expo-router": "^4.0.17",
     "expo-status-bar": "~2.0.1",
-    "react": "18.3.1",
-    "react-native": "0.76.6"
+    "nativewind": "^2.0.11",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-native": "^0.76.6",
+    "react-native-gesture-handler": "^2.22.1",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-responsive-screen": "^1.4.2",
+    "react-native-snap-carousel": "^3.9.1",
+    "react-native-vector-icons": "^10.2.0",
+    "react-native-web": "^0.19.13"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "tailwindcss": "^3.3.2"
   },
   "private": true
 }
