--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "expo-router": "^4.0.17",
     "expo-status-bar": "~2.0.1",
     "nativewind": "^2.0.11",
+    "patch-package": "^8.0.0",
+    "postinstall-postinstall": "^2.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-native": "^0.76.6",
