--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~4.0.1",
+    "axios": "^1.7.9",
     "expo": "~52.0.27",
     "expo-linear-gradient": "~14.0.2",
     "expo-router": "^4.0.17",
@@ -25,7 +26,9 @@
     "react-native-responsive-screen": "^1.4.2",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-vector-icons": "^10.2.0",
-    "react-native-web": "^0.19.13"
+    "react-native-virtualized-view": "^1.0.0",
+    "react-native-web": "^0.19.13",
+    "expo-image": "~2.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
